task1 in progress

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,12 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Tester",
+            "request": "launch",
+            "mainClass": "Tester"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Board",
             "request": "launch",
             "mainClass": "Board"
